methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:7: error: not found: value setGroundColor
  setGroundColor(c)
  ^FlowerPot:21: error: not found: value setGroundColor
  setGroundColor(Color.YELLOW)
  ^FlowerPot:30: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^